components/apps-test/base/frontend/deployment.yaml
---
# Fronted for the CISO Assistant application
# Using deployment for the frontend to match the following docker-compose
# version: "3.9"
# services:
#   backend:
#     container_name: backend
#     image: ghcr.io/intuitem/ciso-assistant-community/backend:latest
#     restart: always
#     environment:
#       - ALLOWED_HOSTS=backend
#       - CISO_ASSISTANT_URL=https://localhost:8443
#       - DJANGO_DEBUG=True
#     volumes:
#       - ./db:/code/db
#   frontend:
#     container_name: frontend
#     environment:
#       - PUBLIC_BACKEND_API_URL=http://backend:8000/api
#       - PROTOCOL_HEADER=x-forwarded-proto
#       - HOST_HEADER=x-forwarded-host
#     image: ghcr.io/intuitem/ciso-assistant-community/frontend:latest
#     depends_on:
#       - backend
#   caddy:
#     container_name: caddy
#     image: caddy:2.7.6
#     restart: unless-stopped
#     ports:
#       - 8443:8443
#     command:
#       - caddy
#       - reverse-proxy
#       - --from
#       - https://localhost:8443
#       - --to
#       - frontend:3000
#     volumes:
#       - ./db:/data
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciso-assistant-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ciso-assistant
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ciso-assistant
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: test
    spec:
      containers:
        - name: frontend
          image: ghcr.io/intuitem/ciso-assistant-community/frontend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            # limits:
            #   memory: "128Mi"
            #   cpu: "500m"
