components/apps-test/base/frontend/ingress.yaml
---
# Ingress resource for the CISO Assistant application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/name: ciso-assistant
    app.kubernetes.io/component: ingress
    app.kubernetes.io/instance: test
  name: ciso-assistant
spec:
  ingressClassName: nginx
  rules:
    - host: &host ${APP_INSTANCE_NAME}.ca.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ciso-assistant-frontend
                port:
                  number: 3000
  # tls:
  #   - hosts:
  #       - *host
  #     secretName: ciso-assistant-tls
---
# Set the configuration to use the OpenShift Route resource
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: ciso-assistant
    app.kubernetes.io/component: ingress
    app.kubernetes.io/instance: test
  name: ciso-assistant
spec:
  host: ${APP_INSTANCE_NAME}.ca.${CLUSTER_DOMAIN}
  to:
    kind: Service
    name: ciso-assistant-frontend
    weight: 100
  port:
    targetPort: 3000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  wildcardPolicy: None
